# rpiclientc

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  test.c  testjson.c  testmosq.c
